crossplane-resources/platform/platformapp/examples/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx
  namespace: demo-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo-nginx.dev
    secretName: demo-nginx-tls
  rules:
  - host: demo-nginx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx
            port:
              number: 80
